# demo-rust-axum

./: .dockerignore  .env  Cargo.toml  Dockerfile  WUBI_DATA_PROCESSING.md  auto_import_wubi.py  build-swing.sh  check_pg_table.py  com.demo-rust-axum.plist  config.yaml  convert_yaml_to_pg.py  crawl_liaozhai.py  deploy.sh  docker-compose.yml  download_wubi_data.py  extract_wubi.py  generate_pg_sql.py  generate_pg_sql_fixed.py  import_to_pg.py  import_to_pg_5433.py  import_wubi_data.py  init.sql  init_old.sql  insert_wubi_characters.sql  migrate_to_pg.py  process_wubi_data.py  update_pinyin.py  verify_pg_data.py  wubi86_pg.sql  wubi_characters_pg.sql  wubi_data_complete.csv  wubi_data_complete.sql  wubi_data_rust.txt
data/: learn.md  wubi_dict.json
doc/: 00-introduction.md
examples/axum-html-form-get-and-post/src/: main.rs
examples/axum-http-header-content-type/src/: main.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  App.vue  api.js  index.css  main.js  types.ts
frontend/src/components/: EnglishTypingPractice.vue  Home.vue  JapaneseTypingPractice.vue  Login.vue  PinyinTypingPractice.vue  SystemMenu.vue  TraditionalChineseTypingPractice.vue  VirtualKeyboard.vue  WubiGraph.vue  WubiLookup.vue  WubiRootKeyboard.vue  WubiTypingPractice.vue
frontend/src/router/: index.js
frontend/src/styles/: elder-friendly.css
go-axum/: .env  go.mod
go-axum/cmd/: main.go
go-axum/internal/config/: config.go
go-axum/internal/db/: db.go
go-axum/internal/handlers/: article.go  auth.go  englishtext.go  health.go  keyradical.go  lesson.go  progress.go  wubi.go
go-axum/internal/models/: models.go
java-spring-axum/: pom.xml
java-spring-axum/src/main/java/com/wubi/: WubiApplication.java
java-spring-axum/src/main/java/com/wubi/config/: DataInitializer.java  SecurityConfig.java
java-spring-axum/src/main/java/com/wubi/controller/: ArticleController.java  AuthController.java  EnglishTextController.java  HealthController.java  KeyRadicalController.java  LessonController.java  ProgressController.java  WubiController.java
java-spring-axum/src/main/java/com/wubi/dto/: LoginRequest.java  LoginResponse.java  ProgressRequest.java  UpdateWubiCodeRequest.java  UserDTO.java
java-spring-axum/src/main/java/com/wubi/entity/: Article.java  EnglishText.java  KeyRadical.java  Lesson.java  User.java  UserProgress.java  WubiCharacter.java
java-spring-axum/src/main/java/com/wubi/repository/: ArticleRepository.java  EnglishTextRepository.java  KeyRadicalRepository.java  LessonRepository.java  UserProgressRepository.java  UserRepository.java  WubiCharacterRepository.java
java-spring-axum/src/main/java/com/wubi/security/: JwtTokenProvider.java
java-spring-axum/src/main/java/com/wubi/service/: ArticleService.java  AuthService.java  EnglishTextService.java  KeyRadicalService.java  LessonService.java  ProgressService.java  WubiService.java
java-spring-axum/src/main/resources/: application.properties
java-swing/: .gitignore
java-swing/src/main/java/com/wubi/client/: WubiSwingApp.java
java-swing/src/main/java/com/wubi/client/api/: WubiApiClient.java
java-swing/src/main/java/com/wubi/client/model/: ApiResponse.java  KeyRadical.java  Lesson.java  User.java  WubiCharacter.java
java-swing/src/main/java/com/wubi/client/ui/: EnglishTypingPanel.java  LoginDialog.java  MainWindow.java  PinyinTypingPanel.java  WubiKeyboardPanel.java  WubiLookupPanel.java  WubiTypingPanel.java
python-axum/: .env  main.py  requirements.txt
python-axum/app/core/: config.py  database.py  security.py
python-axum/app/models/: __init__.py  models.py
python-axum/app/routers/: __init__.py  articles.py  auth.py  englishtexts.py  keyradicals.py  lessons.py  progress.py  wubi.py
python-axum/app/schemas/: __init__.py  schemas.py
python-axum/app/utils/: db_init.py
scripts/: convert_wubi_dict.py  download_wubi_dict.py  download_wubi_dict.sh  generate_wubi_dict.py
src/: app.rs  config.rs  data.rs  database.rs  db.rs  main.rs  test_api.rs  wubi.rs  wubi_dict.rs
