[package]
name = "demo-rust-axum"
version = "2.0.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum"

description = """
Demo of Rust and Axum
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.8.4", features = ["macros"] } # Web framework that focuses on ergonomics and modularity.
hyper = { version = "~1.6.0", features = ["full"] } # A fast and correct HTTP library.
tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = { version =  "~0.5.2" } # Modular reusable components for building robust clients and servers.
tower-http = { version = "~0.6.0", features = ["cors"] } # Tower middleware for HTTP, including CORS.
serde = { version = "~1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.140" } # Serde serialization/deserialization of JSON data.
sqlx = { version = "~0.8.0", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono"] } # MySQL and PostgreSQL support for async database access.
base64 = { version = "~0.22.1" } # Encode and decode base64 as bytes or utf8.
http = { version = "~1.3.1" } # Types for HTTP requests and responses.
tracing = { version = "~0.1.41" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.
thiserror = { version = "~2.0.3" } # Error handling library.
async-trait = "~0.1.77" # Async trait support
serde_yaml = "~0.9.32" # YAML configuration parsing
redis = { version = "~0.25.2", features = ["tokio-comp", "json"] } # Redis client with async support
mongodb = { version = "~2.8" } # MongoDB driver with async support
bson = "~2.9" # BSON serialization for MongoDB
futures = "~0.3" # For async stream utilities

# 认证相关依赖（用户选择：JWT令牌）
argon2 = { version = "~0.5.0", features = ["std"] }          # 密码哈希
jsonwebtoken = "~9.0"      # JWT令牌
chrono = { version = "~0.4.35", features = ["serde"] }      # 时间处理
dotenvy = "~0.15.7"        # 环境变量
axum-extra = { version = "~0.10.3", features = ["typed-header"] } # 用于TypedHeader提取器
rand = "~0.8.5"           # 密码哈希盐生成

[dev-dependencies]
axum-test = { version = "17.3.0" } # Library for writing tests for web servers written using Axum.

[[example]]
name = "axum-bind-host-port-socket-address"
path = "examples/axum-bind-host-port-socket-address/src/main.rs"

[[example]]
name = "axum-count-handler-function"
path = "examples/axum-count-handler-function/src/main.rs"

[[example]]
name = "axum-epoch-handler-function"
path = "examples/axum-epoch-handler-function/src/main.rs"

[[example]]
name = "axum-extract-json-parameters"
path = "examples/axum-extract-json-parameters/src/main.rs"

[[example]]
name = "axum-extract-path-parameters"
path = "examples/axum-extract-path-parameters/src/main.rs"

[[example]]
name = "axum-extract-query-parameters"
path = "examples/axum-extract-query-parameters/src/main.rs"

[[example]]
name = "axum-graceful-shutdown"
path = "examples/axum-graceful-shutdown/src/main.rs"

[[example]]
name = "axum-hello-world-with-functions"
path = "examples/axum-hello-world-with-functions/src/main.rs"

[[example]]
name = "axum-hello-world"
path = "examples/axum-hello-world/src/main.rs"

[[example]]
name = "axum-html-form-get-and-post"
path = "examples/axum-html-form-get-and-post/src/main.rs"

[[example]]
name = "axum-http-header-content-type"
path = "examples/axum-http-header-content-type/src/main.rs"

[[example]]
name = "axum-respond-to-multiple-http-verbs"
path = "examples/axum-respond-to-multiple-http-verbs/src/main.rs"

[[example]]
name = "axum-respond-with-custom-header-and-custom-image"
path = "examples/axum-respond-with-a-custom-header-and-a-custom-image/src/main.rs"

[[example]]
name = "axum-respond-with-a-file-of-html"
path = "examples/axum-respond-with-a-file-of-html/src/main.rs"

[[example]]
name = "axum-respond-with-http-status-code-ok"
path = "examples/axum-respond-with-http-status-code-ok/src/main.rs"

[[example]]
name = "axum-respond-with-a-json-payload"
path = "examples/axum-respond-with-a-json-payload/src/main.rs"

[[example]]
name = "axum-respond-with-the-request-uri"
path = "examples/axum-respond-with-the-request-uri/src/main.rs"

[[example]]
name = "axum-respond-with-a-string-of-html"
path = "examples/axum-respond-with-a-string-of-html/src/main.rs"

[[example]]
name = "axum-restful-routes-and-resources-with-html"
path = "examples/axum-restful-routes-and-resources-with-html/src/main.rs"

[[example]]
name = "axum-restful-routes-and-resources-with-json"
path = "examples/axum-restful-routes-and-resources-with-json/src/main.rs"

[[example]]
name = "axum-router-fallback"
path = "examples/axum-router-fallback/src/main.rs"

[[example]]
name = "axum-tracing-subscriber"
path = "examples/axum-tracing-subscriber/src/main.rs"

[[example]]
name = "axum-uptime-handler-function"
path = "examples/axum-uptime-handler-function/src/main.rs"
